--- a/views/user/register.hbs
+++ b/views/user/register.hbs
@@ -16,6 +16,24 @@
                     </div>
                 </div>
                 <div class="form-group">
+                    <label class="col-sm-4 control-label" for="birthDate">Birth Date</label>
+                    <div class="col-sm-4">
+                        <input type="date" class="form-control" id="birthDate" placeholder="Date" name="birthDate" required value={{birthDate}} >
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-4 control-label" for="gender">Gender</label>
+                    <div class="col-sm-4">
+                        <label class="radio-inline">
+                                <input type="radio" name="gender" value="Male">Male
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" name="gender" value="Female">Female
+                        </label>
+                    </div>
+                </div>
+
+                <div class="form-group">
                     <label class="col-sm-4 control-label" for="inputPassword">Password</label>
                     <div class="col-sm-4">
                         <input type="password" class="form-control" id="inputPassword" placeholder="Password" required name="password">
