--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -1,4 +1,9 @@
 <div class="container body-content span=8 offset=2">
+    {{#if error}}
+        <div class="has-error">
+            <h3>{{error}}</h3>
+        </div>
+    {{/if}}
     <div class="well">
         <form class="form-horizontal" method="post" action="/user/login">
             <fieldset>
