--- a/views/user/register.hbs
+++ b/views/user/register.hbs
@@ -1,4 +1,9 @@
 <div class="container body-content span=8 offset=2">
+    {{#if error}}
+        <div class="has-error">
+            <h3>{{error}}</h3>
+        </div>
+    {{/if}}
     <div class="well">
         <form class="form-horizontal" method="post" action="/user/register">
             <fieldset>
@@ -25,7 +30,7 @@
                     <label class="col-sm-4 control-label" for="gender">Gender</label>
                     <div class="col-sm-4">
                         <label class="radio-inline">
-                                <input type="radio" name="gender" value="Male">Male
+                                <input type="radio" name="gender" value="Male" checked="checked">Male
                         </label>
                         <label class="radio-inline">
                             <input type="radio" name="gender" value="Female">Female
