Updated home page and user posting comments

--- a/views/article/details.hbs
+++ b/views/article/details.hbs
@@ -1,4 +1,10 @@
 <div class="container body-content">
+    {{#if error}}
+        <div class="has-error">
+            <h3>{{error}}</h3>
+        </div>
+    {{/if}}
+    <div cla
     <div class="row">
         <div class="col-md-12">
             <article>
