--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -1,4 +1,9 @@
 <div class="container body-content">
+    {{#if error}}
+        <div class="has-error">
+            <h3>{{error}}</h3>
+        </div>
+    {{/if}}
     <div class="row">
         {{#each articles}}
             <div class="col-md-6">
@@ -23,4 +28,14 @@
             </div>
         {{/each}}
     </div>
+
+    <form method="post">
+        <div class="btn-group" role="toolbar">
+            <button class="btn btn-primary" type="submit" value="0" name="articlesNumber">1</button>
+            <button class="btn btn-primary" type="submit" value="6" name="articlesNumber">2</button>
+            <button class="btn btn-primary" type="submit" value="12" name="articlesNumber">3</button>
+        </div>
+    </form>
+
+
 </div>
