--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>SoftUni Blog</title>
+    <title>vex Blog</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <script type= "text/javascript" src="/javascripts/jquery-3.3.1.js"></script>
     <script src="/javascripts/bootstrap.js"></script>
@@ -11,7 +11,7 @@
     <div class="navbar navbar-default navbar-fixed-top text-uppercase">
         <div class="container">
             <div class="navbar-header">
-                <a href="/" class="navbar-brand">SoftUni Blog</a>
+                <a href="/" class="navbar-brand">vex Blog</a>
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -42,7 +42,7 @@
 </body>
 <footer>
     <div class="container modal-footer">
-        <p>&copy; 2018 - Software University Foundation</p>
+        <p>&copy; 2018 - vex Foundation</p>
     </div>
 </footer>
 </html>
