User can change info and password

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -21,7 +21,7 @@
             {{#if user}}
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/user/details">Welcome({{user.fullName}})</a></li>
+                        <li><a href="/{{user.fullName}}/details" name="test">Welcome({{user.fullName}})</a></li>
                         <li><a href="/article/create">New Article</a></li>
                         <li><a href="/user/logout">Logout</a></li>
                     </ul>
