--- a/views/user/edit.hbs
+++ b/views/user/edit.hbs
@@ -8,7 +8,12 @@
             <div class="alert alert-info alert-dismissable">
                 <a class="panel-close close" data-dismiss="alert">×</a>
                 <i class="fa fa-coffee"></i>
-                This is an <strong>.alert</strong>. Use this to show important messages to the user.
+                {{#if error}}
+                    {{error}}
+                {{/if}}
+                {{#unless error}}
+                    <p>Change your profile</p>
+                {{/unless}}
             </div>
             <h3>Personal info</h3>
 
@@ -43,18 +48,12 @@
                         </label>
                     </div>
                 </div>
-                <!--<div class="form-group">-->
-                    <!--<label class="col-md-3 control-label">Password:</label>-->
-                    <!--<div class="col-md-8">-->
-                        <!--<input class="form-control" type="password" value="{{user.password}}">-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="form-group">-->
-                    <!--<label class="col-md-3 control-label">Confirm password:</label>-->
-                    <!--<div class="col-md-8">-->
-                        <!--<input class="form-control" type="password" value="11111122333">-->
-                    <!--</div>-->
-                <!--</div>-->
+                <div class="form-group">
+                    <label class="col-md-3 control-label">Password:</label>
+                    <div class="col-md-8">
+                        <input class="form-control" type="password" name="password">
+                    </div>
+                </div>
                 <div class="form-group">
                     <label class="col-md-3 control-label"></label>
                     <div class="col-md-8">
