--- a/views/user/password.hbs
+++ b/views/user/password.hbs
@@ -1,22 +1,38 @@
 {{#if user}}
-    <div class="container" >
+    <div class="container">
         <h1>Edit Profile</h1>
         <hr>
 
         <!-- edit form column -->
         <form class="form-horizontal" method="post">
             <fieldset>
+                <div class="alert alert-info alert-dismissable">
+                    <a class="panel-close close" data-dismiss="alert">×</a>
+                    <i class="fa fa-coffee"></i>
+                    {{#if error}}
+                        {{error}}
+                    {{/if}}
+                    {{#unless error}}
+                        <p>Change your password</p>
+                    {{/unless}}
+                </div>
                 <div class="form-group">
-                <label class="col-md-3 control-label">Password:</label>
-                <div class="col-md-8">
-                <input class="form-control" type="password" name="password">
-                </div>
+                    <label class="col-md-3 control-label">Old Password:</label>
+                    <div class="col-md-8">
+                        <input class="form-control" type="password" name="oldPassword">
+                    </div>
                 </div>
                 <div class="form-group">
-                <label class="col-md-3 control-label">Confirm password:</label>
-                <div class="col-md-8">
-                <input class="form-control" type="password" name="repeatedPassword">
+                    <label class="col-md-3 control-label">New Password:</label>
+                    <div class="col-md-8">
+                        <input class="form-control" type="password" name="newPassword">
+                    </div>
                 </div>
+                <div class="form-group">
+                    <label class="col-md-3 control-label">Confirm password:</label>
+                    <div class="col-md-8">
+                        <input class="form-control" type="password" name="repeatedPassword">
+                    </div>
                 </div>
                 <div class="form-group">
                     <label class="col-md-3 control-label"></label>
@@ -26,8 +42,8 @@
                         <input type="reset" class="btn btn-default" value="Cancel">
                     </div>
                 </div>
-            </form>
-        </div>
+        </form>
+    </div>
     </div>
     </div>
     <hr>
