--- a/views/user/details.hbs
+++ b/views/user/details.hbs
@@ -31,11 +31,11 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12">
-                                <hr><a href='/{{user.fullName}}/edit/{{user.id}}' class="btn btn-default pull-right"><i class="glyphicon glyphicon-pencil"></i> Edit</a>
+                                <hr><a href='/{{user.fullName}}/edit/{{user.id}}' class="btn btn-default"><i class="glyphicon glyphicon-pencil"></i> Edit</a>
+                                <a href='/{{user.fullName}}/changePassword/{{user.id}}' class="btn btn-default"><i class="glyphicon glyphicon-pencil"></i> Change Password</a>
                             </div>
-                            <div class="col-md-12">
-                                <a href='/{{user.fullName}}/changePassword/{{user.id}}' class="btn btn-default pull-right"><i class="glyphicon glyphicon-pencil"></i> Change Password</a>
-                            </div>
+                            <!--<div class="col-md-12">-->
+                            <!--</div>-->
                         </div>
 
                     </div>
