--- a/views/article/details.hbs
+++ b/views/article/details.hbs
@@ -1,10 +1,11 @@
 <div class="container body-content">
     {{#if error}}
-        <div class="has-error">
-            <h3>{{error}}</h3>
+        <div class="alert alert-info alert-dismissable">
+            <a class="panel-close close" data-dismiss="alert">×</a>
+            <i class="fa fa-coffee"></i>
+            {{error}}
         </div>
     {{/if}}
-    <div cla
     <div class="row">
         <div class="col-md-12">
             <article>
@@ -31,7 +32,8 @@
             <form method="post">
                 <div class="form-group">
                     <label for="comment">Comment:</label>
-                    <textarea class="form-control" id="articleContent" rows="5" name="content" required style="max-width: 100%">{{comment}}</textarea>
+                    <textarea class="form-control" id="articleContent" rows="5" name="content" required
+                              style="max-width: 100%">{{comment}}</textarea>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-4 col-sm-offset-11">
@@ -46,23 +48,26 @@
                     <div class="row">
                         <div class="col-sm-1">
                             <div class="thumbnail">
-                                <img class="img-responsive user-photo" src="http://robohash.org/sitsequiquia.png?size=120x120">
+                                <img class="img-responsive user-photo"
+                                     src="http://robohash.org/sitsequiquia.png?size=120x120">
                             </div><!-- /thumbnail -->
                         </div><!-- /col-sm-1 -->
 
                         <div class="col-sm-6">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <strong>{{this.User.fullName}}</strong> <!--<span class="text-muted">commented 5 days ago</span>-->
+                                    <strong>{{this.User.fullName}}</strong>
+                                    <!--<span class="text-muted">commented 5 days ago</span>-->
                                 </div>
                                 <div class="panel-body">
                                     {{this.content}}
                                 </div><!-- /panel-body -->
                             </div><!-- /panel panel-default -->
                         </div><!-- /col-sm-5 -->
-                </div>
-                <br>
-            {{/each}}
+                    </div>
+                    <br>
+                {{/each}}
+            </div>
         </div>
     </div>
 </div>
