User can see his articles, edit them and delete them

--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -31,14 +31,14 @@
         {{/each}}
     </div>
 
-    {{#if articles}}
-        <form method="post">
-            <div class="btn-group" role="toolbar">
-                <button class="btn btn-primary" type="submit" value="0" name="articlesNumber">1</button>
-                <button class="btn btn-primary" type="submit" value="6" name="articlesNumber">2</button>
-                <button class="btn btn-primary" type="submit" value="12" name="articlesNumber">3</button>
-            </div>
-        </form>
-    {{/if}}
+    <!--{{#if articles}}-->
+        <!--<form method="post">-->
+            <!--<div class="btn-group" role="toolbar">-->
+                <!--<button class="btn btn-primary" type="submit" value="0" name="articlesNumber">1</button>-->
+                <!--<button class="btn btn-primary" type="submit" value="6" name="articlesNumber">2</button>-->
+                <!--<button class="btn btn-primary" type="submit" value="12" name="articlesNumber">3</button>-->
+            <!--</div>-->
+        <!--</form>-->
+    <!--{{/if}}-->
 
 </div>
