--- a/views/user/details.hbs
+++ b/views/user/details.hbs
@@ -31,7 +31,7 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12">
-                                <hr><a href='/{{user.fullName}}/edit/{{user.id}}' class="btn btn-default"><i class="glyphicon glyphicon-pencil"></i> Edit</a>
+                                <hr><a href='/{{user.fullName}}/edit/{{user.id}}' class="btn btn-default"><i class="glyphicon glyphicon-pencil"></i> Edit Profile</a>
                                 <a href='/{{user.fullName}}/changePassword/{{user.id}}' class="btn btn-default"><i class="glyphicon glyphicon-pencil"></i> Change Password</a>
                             </div>
                             <!--<div class="col-md-12">-->
