--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -23,6 +23,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="/{{user.fullName}}/details" name="test">Welcome({{user.fullName}})</a></li>
                         <li><a href="/article/create">New Article</a></li>
+                        <li><a href="/user/articles/{{user.id}}">My Articles</a></li>
                         <li><a href="/user/logout">Logout</a></li>
                     </ul>
                 </div>
