--- a/views/user/password.hbs
+++ b/views/user/password.hbs
@@ -1,6 +1,6 @@
 {{#if user}}
     <div class="container">
-        <h1>Edit Profile</h1>
+        <h1>Change Password</h1>
         <hr>
 
         <!-- edit form column -->
