--- a/views/user/editArticle.hbs
+++ b/views/user/editArticle.hbs
@@ -1,3 +1,4 @@
+{{#if user}}
 <div class="container body-content span=8 offset=2">
     {{#if error}}
         <div class="alert alert-info alert-dismissable">
@@ -27,7 +28,7 @@
                     <div class="form-group">
                         <div class="col-sm-4 col-sm-offset-4">
 
-                            <button type="reset" class="btn btn-default">Cancel</button>
+                            <a href="/" class="btn btn-default">Cancel</a>
 
                             <button type="submit" class="btn btn-primary">Submit</button>
                         </div>
@@ -36,3 +37,12 @@
         </form>
     </div>
 </div>
+{{/if}}
+
+{{#unless user}}
+    <div class="container body-content">
+        <div class="col-md-12">
+            <h1>You are not logged in!</h1>
+        </div>
+    </div>
+{{/unless}}
