--- a/views/user/password.hbs
+++ b/views/user/password.hbs
@@ -5,8 +5,6 @@
 
         <!-- edit form column -->
         <form class="form-horizontal" method="post">
-            <fieldset>
-
                 {{#if error}}
                     <div class="alert alert-info alert-dismissable">
                         <a class="panel-close close" data-dismiss="alert">×</a>
@@ -38,7 +36,7 @@
                     <div class="col-md-8">
                         <input type="submit" class="btn btn-primary" value="Save Changes">
                         <span></span>
-                        <input type="reset" class="btn btn-default" value="Cancel">
+                        <a href="/{{user.fullName}}/details" class="btn btn-default">Cancel</a>
                     </div>
                 </div>
         </form>
@@ -47,3 +45,10 @@
     </div>
     <hr>
 {{/if}}
+{{#unless user}}
+    <div class="container">
+        <div class="col-md-8">
+            <h1>You are not logged in!</h1>
+        </div>
+    </div>
+{{/unless}}
