--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -31,14 +31,15 @@
         {{/each}}
     </div>
 
-    <!--{{#if articles}}-->
-        <!--<form method="post">-->
-            <!--<div class="btn-group" role="toolbar">-->
-                <!--<button class="btn btn-primary" type="submit" value="0" name="articlesNumber">1</button>-->
-                <!--<button class="btn btn-primary" type="submit" value="6" name="articlesNumber">2</button>-->
-                <!--<button class="btn btn-primary" type="submit" value="12" name="articlesNumber">3</button>-->
-            <!--</div>-->
-        <!--</form>-->
-    <!--{{/if}}-->
+    {{#if articles}}
+        <form method="post">
+            <div class="btn-group" role="toolbar">
+                {{#times n}}
+                    <button class="btn btn-primary" type="submit" value="{{this}}"
+                            name="articlesNumber">{{this}}</button>
+                {{/times}}
+            </div>
+        </form>
+    {{/if}}
 
 </div>
