User can like posts (buggy for now)

--- a/views/article/details.hbs
+++ b/views/article/details.hbs
@@ -42,6 +42,17 @@
                 </div>
             </form>
         </div>
+        <form method="post">
+            <div class="container">
+                <label class="inline">
+                    <button type="submit" style="background: none; border: none; "><i class="far fa-thumbs-up " style="font-size: 35px"></i></button>
+                </label>
+                <label class="inline">
+                    <div style="font-size: 35px">{{likes}}</div>
+                </label>
+            </div>
+        </form>
+
         <div class="container">
             <div class="col-md-12">
                 {{#each comments}}
