--- a/views/user/articles.hbs
+++ b/views/user/articles.hbs
@@ -20,7 +20,7 @@
                     <footer>
                         <div class="form-group">
                             <div class="pull-right col-sm-1 control-label">
-                                <a class="btn btn-default btn-xs" href="/user/article/details/{{this.id}}">Read more &raquo;</a>
+                                <a class="btn btn-default btn-xs" href="/article/details/{{this.id}}">Read more &raquo;</a>
                             </div>
                             <div class="pull-right col-sm-0 control-label">
                                 <a class="btn btn-default btn-danger btn-xs" href="/user/article/delete/{{this.id}}">Delete ×</a>
