--- a/views/user/account.hbs
+++ b/views/user/account.hbs
@@ -6,7 +6,9 @@
                 <div class="panel panel-default">
                     <div class="panel-body">
                         <div class="row">
-                            <div class="col-md-12 lead">User profile<hr></div>
+                            <div class="col-md-12 lead">User profile
+                                <hr>
+                            </div>
                         </div>
                         <div class="row">
                             <div class="col-md-4 text-center">
@@ -31,8 +33,11 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12">
-                                <hr><a href='/{{user.fullName}}/edit/{{user.id}}' class="btn btn-default"><i class="glyphicon glyphicon-pencil"></i> Edit Profile</a>
-                                <a href='/{{user.fullName}}/changePassword/{{user.id}}' class="btn btn-default"><i class="glyphicon glyphicon-pencil"></i> Change Password</a>
+                                <hr>
+                                <a href='/{{user.fullName}}/edit/{{user.id}}' class="btn btn-default"><i
+                                        class="glyphicon glyphicon-pencil"></i> Edit Profile</a>
+                                <a href='/{{user.fullName}}/changePassword/{{user.id}}' class="btn btn-default"><i
+                                        class="glyphicon glyphicon-pencil"></i> Change Password</a>
                             </div>
                             <!--<div class="col-md-12">-->
                             <!--</div>-->
