--- a/views/user/member.hbs
+++ b/views/user/member.hbs
@@ -30,7 +30,27 @@
                                 </div>
                             </div>
                         </div>
-
+                        <div class="row">
+                            <div class="col-md-12">
+                                <hr>
+                                <form method="post">
+                                    <button class="btn btn-default">
+                                        <i class="glyphicon glyphicon-pencil"></i> Add as Friend
+                                    </button>
+                                </form>
+                            </div>
+                        </div>
+                        <!--<div class="row">-->
+                            <!--<div class="col-md-12">-->
+                                <!--<hr>-->
+                                <!--<a href='/{{user.fullName}}/edit/{{user.id}}' class="btn btn-default"><i-->
+                                        <!--class="glyphicon glyphicon-pencil"></i> Edit Profile</a>-->
+                                <!--<a href='/{{user.fullName}}/changePassword/{{user.id}}' class="btn btn-default"><i-->
+                                        <!--class="glyphicon glyphicon-pencil"></i> Change Password</a>-->
+                            <!--</div>-->
+                            <!--&lt;!&ndash;<div class="col-md-12">&ndash;&gt;-->
+                            <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                        <!--</div>-->
                     </div>
                 </div>
             </div>
