Added some validation and fixed more bugs(still no friends)

--- a/views/article/details.hbs
+++ b/views/article/details.hbs
@@ -19,7 +19,7 @@
                     </p>
 
                     <small class="author">
-                        {{this.article.userFullName}}
+                        {{userFullName}}
                     </small>
 
                     <footer>
