--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -14,7 +14,7 @@
                         <h2>{{this.title}}</h2>
                     </header>
 
-                    <p>{{this.content}}
+                    <p>{{this.summary}}
                     </p>
 
                     <small class="author">
